developer/src/kmc-package/test/fixtures/invalid/keyboardcontentfilenotfound.kps
<?xml version="1.0" encoding="utf-8"?>
<Package>
  <System>
    <KeymanDeveloperVersion>15.0.266.0</KeymanDeveloperVersion>
    <FileVersion>7.0</FileVersion>
  </System>
  <Options>
    <ExecuteProgram></ExecuteProgram>
    <ReadMeFile>readme.htm</ReadMeFile>
    <GraphicFile>splash.gif</GraphicFile>
    <MSIFileName></MSIFileName>
    <MSIOptions></MSIOptions>
    <FollowKeyboardVersion/>
  </Options>
  <StartMenu>
    <Folder></Folder>
    <Items/>
  </StartMenu>
  <Info>
    <Name URL="">error_keyboard_content_file_not_found</Name>
    <Copyright URL="">© 2015-2022 SIL International</Copyright>
    <Author URL="mailto:makara_sok@sil.org">Makara Sok</Author>
    <Version URL=""></Version>
    <WebSite URL="https://keyman.com/keyboards/khmer_angkor">https://keyman.com/keyboards/khmer_angkor</WebSite>
  </Info>
  <Files>
  </Files>
  <Keyboards>
    <Keyboard>
      <!-- ERROR_KeyboardContentFileNotFound -->
      <Name>Khmer Angkor</Name>
      <ID>khmer_angkor</ID>
      <Version>1.3</Version>
      <OSKFont>..\shared\fonts\khmer\busrakbd\khmer_busra_kbd.ttf</OSKFont>
      <DisplayFont>..\shared\fonts\khmer\mondulkiri\Mondulkiri-R.ttf</DisplayFont>
      <Languages>
        <Language ID="km">Central Khmer (Khmer, Cambodia)</Language>
      </Languages>
    </Keyboard>
  </Keyboards>
  <Strings/>
</Package>
